Refactor USFM editor switcher to use AJAX select
Replaces manual select element construction for the USFM editor switcher with a dynamic AJAX-based select using dialog::select.
https://github.com/bibledit/cloud/issues/1017

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -149,9 +149,7 @@ translate("Available Bible editors in the Bible editor selector:")
   <label for="fastswitchusfmeditors">translate("USFM editor:")<span class="tooltip"></span>
     <span class="tooltip-text">translate("Enable the USFM Bible editor?")</span>
   </label>
-  <select id="fastswitchusfmeditors" name="fastswitchusfmeditors" value="##fastswitchusfmeditors##">
-    ##fastswitchusfmeditorsoptags##
-  </select>
+  ##fastswitchusfmeditors##
 </p>
 
 <br>
