Add tooltips to editor settings and simplify HTML
Tooltips for visual and USFM Bible editor settings were added in index.cpp. Corresponding tooltip markup was removed from index.html, simplifying the HTML and relying on backend-provided tooltips.
https://github.com/bibledit/cloud/issues/1017

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -137,18 +137,12 @@ translate("Show a link in the Bible editor to select another Bible editor.")
 translate("Available Bible editors in the Bible editor selector:")
 [<a href="../editor/select">...</a>]
 </p>
-<p class="settings-container">
-  <label for="fastswitchvisualeditors">translate("Text editors:")<span class="tooltip"></span>
-    <span class="tooltip-text">translate("Which visual Bible editors to enable?")</span>
-  </label>
-  <select id="fastswitchvisualeditors" name="fastswitchvisualeditors" value="##fastswitchvisualeditors##">
-    ##fastswitchvisualeditorsoptags##
-  </select>
+<p>
+  <label for="fastswitchvisualeditors">translate("Text editors:")</label>
+  ##fastswitchvisualeditors##
 </p>
-<p class="settings-container">
-  <label for="fastswitchusfmeditors">translate("USFM editor:")<span class="tooltip"></span>
-    <span class="tooltip-text">translate("Enable the USFM Bible editor?")</span>
-  </label>
+<p>
+  <label for="fastswitchusfmeditors">translate("USFM editor:")</label>
   ##fastswitchusfmeditors##
 </p>
 
