Refactor verse separator and date format settings UI
Updated the personalize page to use AJAX-based select controls for verse separator and date format settings, replacing the previous static select elements. Simplified HTML structure and improved tooltip handling. Adjusted JavaScript to match the new settings submission logic.
https://github.com/bibledit/cloud/issues/1017

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -274,13 +274,9 @@ translate ("Disable the pop-up menu when text is selected.")
 
 <!-- #BEGINZONE advancedmode -->
 <br>
-<p class="settings-container">
-  <label for="verseseparator">translate("Verse separator for Bible notes entry"):<span class="tooltip"></span>
-    <span class="tooltip-text">translate("Which verse separator to use for notes entry?")</span>
-  </label>
-  <select id="verseseparator" name="verseseparator" value="##verseseparator##">
-    ##verseseparatoroptags##
-  </select>
+<p>
+  <label for="verseseparator">translate("Verse separator for Bible notes entry"):</label>
+  ##verseseparator##
 </p>
 <!-- #ENDZONE advancedmode -->
 
@@ -312,13 +308,9 @@ translate("Bibledit always sends the focused verse reference to Accordance.")
 
 <!-- #BEGINZONE advancedmode -->
 <br>
-<p class="settings-container">
-  <label for="dateformat">translate("Date format in consultation notes"):<span class="tooltip"></span>
-    <span class="tooltip-text">translate("The date format to use for consultation notes?")</span>
-  </label>
-  <select id="dateformat" name="dateformat" value="##dateformat##">
-    ##dateformatoptags##
-  </select>
+<p>
+  <label for="dateformat">translate("Date format in consultation notes"):</label>
+  ##dateformat##
 </p>
 <!-- #ENDZONE advancedmode -->
 
