Use standard template iterations for new style dialog
https://github.com/bibledit/cloud/issues/1017

--- a/styles/new.html
+++ b/styles/new.html
@@ -13,7 +13,9 @@
   <p>
   translate("Existing style to base the new style on:")
   <select id="base" name="base">
-    ##base##
+<!-- #BEGINITERATION option -->
+    <option>##style##</option>
+<!-- #ENDITERATION option -->
   </select>
   </p>
 
