Move selectors to new modern widget
https://github.com/bibledit/cloud/issues/1017

--- a/styles/view.html
+++ b/styles/view.html
@@ -24,47 +24,27 @@
 
 <tr>
   <td>translate("Italic")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="italic" onchange="this.form.submit()">##italic##</select>
-    </form>
-  </td>
+  <td>##italic##</td>
 </tr>
 
 <tr>
   <td>translate("Bold")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="bold" onchange="this.form.submit()">##bold##</select>
-    </form>
-  </td>
+  <td>##bold##</td>
 </tr>
 
 <tr>
   <td>translate("Underline")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="underline" onchange="this.form.submit()">##underline##</select>
-    </form>
-  </td>
+  <td>##underline##</td>
 </tr>
 
 <tr>
   <td>translate("Small caps")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="smallcaps" onchange="this.form.submit()">##smallcaps##</select>
-    </form>
-  </td>
+  <td>##smallcaps##</td>
 </tr>
 
 <tr>
   <td>translate("Text alignment")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="textalignment" onchange="this.form.submit()">##textalignment##</select>
-    </form>
-  </td>
+  <td>##textalignment##</td>
 </tr>
 
 <tr>
@@ -128,47 +108,27 @@
 
 <tr>
   <td>translate("Italic")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="italic" onchange="this.form.submit()">##italic##</select>
-    </form>
-  </td>
+  <td>##italic##</td>
 </tr>
 
 <tr>
   <td>translate("Bold")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="bold" onchange="this.form.submit()">##bold##</select>
-    </form>
-  </td>
+  <td>##bold##</td>
 </tr>
 
 <tr>
   <td>translate("Underline")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="underline" onchange="this.form.submit()">##underline##</select>
-    </form>
-  </td>
+  <td>##underline##</td>
 </tr>
 
 <tr>
   <td>translate("Small caps")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="smallcaps" onchange="this.form.submit()">##smallcaps##</select>
-    </form>
-  </td>
+  <td>##smallcaps##</td>
 </tr>
 
 <tr>
   <td>translate("Superscript")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="superscript" onchange="this.form.submit()">##superscript##</select>
-    </form>
-  </td>
+  <td>##superscript##</td>
 </tr>
 
 <!-- #BEGINZONE character_color -->
