Modernize note restart settings
https://github.com/bibledit/cloud/issues/1017

--- a/styles/view.html
+++ b/styles/view.html
@@ -218,11 +218,7 @@
 <!-- #BEGINZONE note_numbering_restart -->
 <tr>
   <td>translate("Restart")</td>
-  <td>
-    <form action="" method="POST">
-      <select name="note_numbering_restart" onchange="this.form.submit()">##restart_options##</select>
-    </form>
-  </td>
+  <td>##noterestart##</td>
 </tr>
 <!-- #ENDZONE note_numbering_restart -->
 
