--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.030: On systems usually without a touch screen the navigation arrows show by default.</p>
 <p>5.1.030: Remove the hyphenation tool.</p>
 <p>5.1.030: Can create USFM3 markers that span columns in tables.</p>
 <p>5.1.030: Can delete checking results by group.</p>
