--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.031: The image resources were removed as too specific for a lean Bible translator system.</p>
 <p>5.1.030: On systems usually without a touch screen the navigation arrows show by default.</p>
 <p>5.1.030: Remove the hyphenation tool.</p>
 <p>5.1.030: Can create USFM3 markers that span columns in tables.</p>
@@ -13,7 +14,7 @@
 <p>5.1.026: The visual editors handle standard and custom milestones in USFM better.</p>
 <p>5.1.026: Proper whitespace normalization on USFM import.</p>
 <p>5.1.026: Proper application and removal of embedded character styles.</p>
-<p>5.1.026: Show the character style again the Bible editors.</p>
+<p>5.1.026: Show the character style again in the Bible editors.</p>
 <p>5.1.025: List deprecated USFM markers in the info document.</p>
 <p>5.1.025: Support for USFM marker \pr Right aligned paragraph.</p>
 <p>5.1.024: Fetches Studylight content securely.</p>
