Add ability to reset styles in stylesheet editor
Introduces a reset option in the stylesheet editor UI, allowing users with write access to reset a style to its default values if it is a default style. Updates the changelog and adjusts the view logic and template to support this feature, displaying appropriate options for default and custom styles.
https://github.com/bibledit/cloud/issues/1020

--- a/styles/view.html
+++ b/styles/view.html
@@ -252,6 +252,24 @@
   </td>
 </tr>
 
+
+<tr>
+  <td>translate("Reset")</td>
+  <td>
+    <!-- #BEGINZONE reset -->
+    <a href="?sheet=##sheet##&style=##style##&reset">translate("Reset this style")</a>
+    <!-- #ENDZONE reset -->
+    <!-- #BEGINZONE noreset -->
+    translate("Cannot reset this custom style")
+    <!-- #ENDZONE noreset -->
+  </td>
+</tr>
+
+
+
+
+
+
 </table>
 
 <script type="text/javascript" src="view.js?##VERSION##"></script>
