--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.031: Can reset a style in the stylesheet editor.</p>
 <p>5.1.031: The image resources were removed as too specific for a lean Bible translator system.</p>
 <p>5.1.030: On systems usually without a touch screen the navigation arrows show by default.</p>
 <p>5.1.030: Remove the hyphenation tool.</p>
