Style info opens in external browser
Included external.js in view.html to enable external link handling.
https://github.com/bibledit/cloud/issues/1024

--- a/styles/view.html
+++ b/styles/view.html
@@ -278,3 +278,4 @@
 var sheet = "##sheet##";
 var style = "##style##";
 </script>
+<script type="text/javascript" src="../assets/external.js"></script>
