--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.031: Can no longer print resources.</p>
 <p>5.1.031: Enable possible embedding in NextCloud.</p>
 <p>5.1.031: Fixes scraper for Elberfelder Bibel.</p>
 <p>5.1.031: Supports the soft hyphen by converting the double forward slash ( // ) to that on export.</p>
