--- a/resource/select.html
+++ b/resource/select.html
@@ -1,69 +1,85 @@
 <h3>translate("Add a Resource")</h3>
 <p>translate("Look for the desired Resource below, and click on it to add it.")</p>
 
-<h4>translate("Bibles within Bibledit")</h4>
+<p><a href="#bible">translate("Bibles within Bibledit")</a></p>
+<p><a href="#usfm">translate("USFM resources")</a></p>
+<!-- #BEGINZONE sensitive_bible_resource -->
+<p><a href="#web_orig">translate("Web resources"): translate ("Original language texts")</a></p>
+<p><a href="#web_bibles">translate("Web resources"): translate ("Bibles and notes")</a></p>
+<p><a href="#lexicon">translate("Lexicons")</a></p>
+<p><a href="#sword">translate("SWORD modules")</a></p>
+<!-- #ENDZONE sensitive_bible_resource -->
+<p><a href="#divider">translate("Dividers")</a></p>
+<!-- #BEGINZONE sensitive_bible_resource -->
+<p><a href="#biblegateway">translate("BibleGateway resources")</a></p>
+<p><a href="#studylight">translate("StudyLight resources")</a></p>
+<!-- #ENDZONE sensitive_bible_resource -->
+<p><a href="#comparative">translate("Comparative resources")</a></p>
+<p><a href="#translated">translate("Translated resources")</a></p>
+
+<h4 id="bible">translate("Bibles within Bibledit")</h4>
 <!-- #BEGINITERATION bible -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION bible -->
 
-<h4>translate("USFM resources")</h4>
+<h4 id="usfm">translate("USFM resources")</h4>
 <!-- #BEGINITERATION usfm -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION usfm -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
-<h4>translate("Web resources"): translate ("Original language texts")</h4>
+<h4 id="web_orig">translate("Web resources"): translate ("Original language texts")</h4>
 <!-- #BEGINITERATION web_orig -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION web_orig -->
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
-<h4>translate("Web resources"): translate ("Bibles and notes")</h4>
+<h4 id="web_bibles">translate("Web resources"): translate ("Bibles and notes")</h4>
 <!-- #BEGINITERATION web_bibles -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION web_bibles -->
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
-<h4>translate("Lexicons")</h4>
+<h4 id="lexicon">translate("Lexicons")</h4>
 <!-- #BEGINITERATION lexicon -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION lexicon -->
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
-<h4>translate("SWORD modules")</h4>
+<h4 id="sword">translate("SWORD modules")</h4>
 <!-- #BEGINITERATION sword -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION sword -->
 <!-- #ENDZONE sensitive_bible_resource -->
 
-<h4>translate("Dividers")</h4>
+<h4 id="divider">translate("Dividers")</h4>
 <!-- #BEGINITERATION divider -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION divider -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
-<h4>translate("BibleGateway resources")</h4>
+<h4 id="biblegateway">translate("BibleGateway resources")</h4>
 <!-- #BEGINITERATION biblegateway -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION biblegateway -->
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
-<h4>translate("StudyLight resources")</h4>
+<h4 id="studylight">translate("StudyLight resources")</h4>
 <!-- #BEGINITERATION studylight -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION studylight -->
 <!-- #ENDZONE sensitive_bible_resource -->
 
-<h4>translate("Comparative resources")</h4>
+<h4 id="comparative">translate("Comparative resources")</h4>
 <!-- #BEGINITERATION comparative -->
 <p><a href="##caller##?add=##name##">##name##</a></p>
 <!-- #ENDITERATION comparative -->
 
-<h4>translate("Translated resources")</h4>
+<h4 id="translated">translate("Translated resources")</h4>
 <!-- #BEGINZONE setup_translated -->
 <p>
 <span class="error">
