--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.032: Resource selection is done in one large page.</p>
 <p>5.1.032: Can edit and remove workspace with backslashes in its name.</p>
 <p>5.1.032: Select consultation notes on multiple statuses.</p>
 <p>5.1.031: Can no longer print resources.</p>
