Fix adding resources
The lists of resources were too long for Flate. It limited the number of iterations.
This is now fixed by preparing the long lists as blocks of XML code, and to be inserted on the page, by Flate, in one go.
https://github.com/bibledit/cloud/issues/1052

--- a/resource/select.html
+++ b/resource/select.html
@@ -18,66 +18,46 @@
 <p><a href="#translated">translate("Translated resources")</a></p>
 
 <h4 id="bible">translate("Bibles within Bibledit")</h4>
-<!-- #BEGINITERATION bible -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION bible -->
+##bibles##
 
 <h4 id="usfm">translate("USFM resources")</h4>
-<!-- #BEGINITERATION usfm -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION usfm -->
+##usfm##
 
 <!-- #BEGINZONE sensitive_bible_resource -->
 <h4 id="web_orig">translate("Web resources"): translate ("Original language texts")</h4>
-<!-- #BEGINITERATION web_orig -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION web_orig -->
+##web_orig##
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
 <h4 id="web_bibles">translate("Web resources"): translate ("Bibles and notes")</h4>
-<!-- #BEGINITERATION web_bibles -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION web_bibles -->
+##web_bibles##
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
 <h4 id="lexicon">translate("Lexicons")</h4>
-<!-- #BEGINITERATION lexicon -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION lexicon -->
+##lexicon##
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
 <h4 id="sword">translate("SWORD modules")</h4>
-<!-- #BEGINITERATION sword -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION sword -->
+##sword##
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <h4 id="divider">translate("Dividers")</h4>
-<!-- #BEGINITERATION divider -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION divider -->
+##divider##
 
 <!-- #BEGINZONE sensitive_bible_resource -->
 <h4 id="biblegateway">translate("BibleGateway resources")</h4>
-<!-- #BEGINITERATION biblegateway -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION biblegateway -->
+##biblegateway##
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <!-- #BEGINZONE sensitive_bible_resource -->
 <h4 id="studylight">translate("StudyLight resources")</h4>
-<!-- #BEGINITERATION studylight -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION studylight -->
+##studylight##
 <!-- #ENDZONE sensitive_bible_resource -->
 
 <h4 id="comparative">translate("Comparative resources")</h4>
-<!-- #BEGINITERATION comparative -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION comparative -->
+##comparative##
 
 <h4 id="translated">translate("Translated resources")</h4>
 <!-- #BEGINZONE setup_translated -->
@@ -88,8 +68,6 @@ translate ("Google Translate has not yet been set up.")
 </span>
 </p>
 <!-- #ENDZONE setup_translated -->
-<!-- #BEGINITERATION translated -->
-<p><a href="##caller##?add=##name##">##name##</a></p>
-<!-- #ENDITERATION translated -->
+##translated##
 
 <h3><a href="##caller##">translate("Cancel")</a></h3>
