--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+
+<p>5.1.034: Fix for very long resource selection page.</p>
 <p>5.1.032: Resource selection is done in one large page.</p>
 <p>5.1.032: Can edit and remove workspace with backslashes in its name.</p>
 <p>5.1.032: Select consultation notes on multiple statuses.</p>
