Fix Bible selection in chapter editor
Updated the Bible selection logic in the chapter editor to use the correct form submission, ensuring that selecting another Bible loads it as expected. Also updated the changelog to reflect this fix.
https://github.com/bibledit/cloud/issues/1048

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,6 @@
 <h1>ChangeLog</h1>
 
-
+<p>5.1.034: Fixed: Selecting another Bible in the chapter editor does not load that other Bible.</p>
 <p>5.1.034: Fix for very long resource selection page.</p>
 <p>5.1.032: Resource selection is done in one large page.</p>
 <p>5.1.032: Can edit and remove workspace with backslashes in its name.</p>
