Add control to disable jQuery inclusion
Introduced a new method `jquery_off()` and a member variable `m_jquery_on` to allow toggling the inclusion of jQuery in the header.
https://github.com/bibledit/cloud/issues/1054

--- a/assets/xhtml_start.html
+++ b/assets/xhtml_start.html
@@ -7,7 +7,9 @@
 ##head_lines## 
 <title>##title##</title>
 <link rel="stylesheet" type="text/css" href="/css/stylesheet.css?##VERSION##">
+  <!-- #BEGINZONE include_jquery -->
 <script type="text/javascript" src="/jquery/jquery-3.5.1.min.js"></script>
+<!-- #ENDZONE include_jquery -->
 <!-- #BEGINZONE include_jquery_touch -->
 <script type="text/javascript" src="/jquery/jquery.touchSwipe.min.js"></script>
 <!-- #ENDZONE include_jquery_touch -->
