--- a/assets/xhtml_start.html
+++ b/assets/xhtml_start.html
@@ -9,16 +9,16 @@
 <link rel="stylesheet" type="text/css" href="/css/stylesheet.css?##VERSION##">
   <!-- #BEGINZONE include_jquery -->
 <script type="text/javascript" src="/jquery/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="/jquery/jquery.longpress.js"></script>
 <!-- #ENDZONE include_jquery -->
 <!-- #BEGINZONE include_jquery_touch -->
 <script type="text/javascript" src="/jquery/jquery.touchSwipe.min.js"></script>
 <!-- #ENDZONE include_jquery_touch -->
-<!-- #BEGINZONE include_notif_it -->
-<link rel="stylesheet" type="text/css" href="/notifit/notifit.css">
-<script type="text/javascript" src="/notifit/notifit.min.js"></script>
-<script type="text/javascript" src="/notifit/index.js"></script>
-<!-- #ENDZONE include_notif_it -->
-<script type="text/javascript" src="/jquery/jquery.longpress.js"></script>
+<!-- #BEGINZONE include_notify_js -->
+<link rel="stylesheet" type="text/css" href="/notifyjs/simple-notify.css" />
+<script type="text/javascript" src="/notifyjs/simple-notify.min.js"></script>
+<script type="text/javascript" src="/notifyjs/index.js"></script>
+<!-- #ENDZONE include_notify_js -->
 <!-- #BEGINZONE include_stylesheet -->
 <link rel="stylesheet" type="text/css" href="/dyncss/basic##included_stylesheet##.css?##VERSION##">
 <!-- #ENDZONE include_stylesheet -->
