Replace jQuery document ready with DOMContentLoaded
Refactored all instances of $(document).ready to use document.addEventListener('DOMContentLoaded', ...) for improved compatibility and performance. This change modernizes the codebase by removing reliance on jQuery for document initialization.
https://github.com/bibledit/cloud/issues/1054

--- a/help/installcloudsource.html
+++ b/help/installcloudsource.html
@@ -12,7 +12,7 @@
 <p>translate("Then follow the steps below to install Bibledit Cloud.")</p>
 
 <script>
-  $(document).ready(function(){
+  document.addEventListener("DOMContentLoaded", function(e) {
     $("#debian").click(function(){
       hide_all();
       $(".debian").show();
