Migrate navigation to vanilla JS
Refactors navigation/passage.js to replace jQuery AJAX and event handling with vanilla JavaScript and fetch API, improving performance and maintainability. Updates pkgdata/files.txt to include nav.js and comments out navigationSetup in resource/index.js pending further integration.
https://github.com/bibledit/cloud/issues/1054

--- a/consistency/index.html
+++ b/consistency/index.html
@@ -53,4 +53,5 @@
 </ul>
 
 <script type="text/javascript" src="index.js?##VERSION##"></script>
+<script type="text/javascript" src="/navigation/nav.js?##VERSION##"></script>
 <script type="text/javascript" src="/filter/passage.js?##VERSION##"></script>
