--- a/changes/changes.html
+++ b/changes/changes.html
@@ -126,5 +126,6 @@ translate("The different categories of change notifications enable you to find o
 var pendingidentifiers = '##pendingidentifiers##';
 </script>
 <script type="text/javascript" src="changes.js?##VERSION##"></script>
+<script type="text/javascript" src="/navigation/nav.js?##VERSION##"></script>
 <script type="text/javascript" src="/notes/click.js?##VERSION##"></script>
 <script type="text/javascript" src="/filter/passage.js?##VERSION##"></script>
