Replace jQuery with vanilla JS in UI scripts
Refactored multiple HTML and JS files to remove jQuery usage and replace it with equivalent vanilla JavaScript for event handling and DOM manipulation. This reduces dependency on jQuery and improves performance and maintainability.
https://github.com/bibledit/cloud/issues/1054

--- a/public/comment.html
+++ b/public/comment.html
@@ -13,13 +13,13 @@
 <script src="/nicedit/nicedit.min.js?##VERSION##"></script>
 <script type="text/javascript">
   area1 = new nicEditor({fullPanel : true}).panelInstance('comment',{hasPanel : true});
-  $ ("body").on ("paste", function (e) {
-    var data = e.originalEvent.clipboardData.getData ('Text');
-    e.preventDefault();
+  document.body.addEventListener ("paste", function (event) {
+    var data = event.clipboardData.getData ('Text');
+    event.preventDefault();
     data = data.replace (/\n/g, "<br>");
     document.execCommand ("insertHTML", false, data);
   });
   document.addEventListener("DOMContentLoaded", function(e) {
-    $ (".nicEdit-main").focus ();
+    document.querySelector(".nicEdit-main").focus ();
   });
 </script>
