--- a/help/installcloudsource.html
+++ b/help/installcloudsource.html
@@ -13,40 +13,40 @@
 
 <script>
   document.addEventListener("DOMContentLoaded", function(e) {
-    $("#debian").click(function(){
+    document.querySelector("#debian").addEventListener("click", function(){
       hide_all();
-      $(".debian").show();
+      document.querySelector(".debian").hidden = false;
     });
-    $("#ubuntu").click(function(){
+    document.querySelector("#ubuntu").addEventListener("click", function(){
       hide_all();
-      $(".ubuntu").show();
+      document.querySelector(".ubuntu").hidden = false;
     });
-    $("#centos").click(function(){
+    document.querySelector("#centos").addEventListener("click", function(){
       hide_all();
-      $(".centos").show();
+      document.querySelector(".centos").hidden = false;
     });
-    $("#redhat").click(function(){
+    document.querySelector("#redhat").addEventListener("click", function(){
       hide_all();
-      $(".redhat").show();
+      document.querySelector(".redhat").hidden = false;
     });
-    $("#alma").click(function(){
+    document.querySelector("#alma").addEventListener("click", function(){
       hide_all();
-      $(".alma").show();
+      document.querySelector(".alma").hidden = false;
     });
-    $("#opensuse").click(function(){
+    document.querySelector("#opensuse").addEventListener("click", function(){
       hide_all();
-      $(".opensuse").show();
+      document.querySelector(".opensuse").hidden = false;
     });
     hide_all();
-    $(".debian").show();
+    document.querySelector(".debian").hidden = false;
   });
   function hide_all () {
-    $(".debian").hide();
-    $(".ubuntu").hide();
-    $(".centos").hide();
-    $(".redhat").hide();
-    $(".alma").hide();
-    $(".opensuse").hide();
+    document.querySelector(".debian").hidden = true;
+    document.querySelector(".ubuntu").hidden = true;
+    document.querySelector(".centos").hidden = true;
+    document.querySelector(".redhat").hidden = true;
+    document.querySelector(".alma").hidden = true;
+    document.querySelector(".opensuse").hidden = true;
   };
 </script>
 
