--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.035: No longer uses jQuery -> improves performance.</p>
 <p>5.1.034: Fixed: Inserting a footnote in italic text removes the space after the footnote.</p>
 <p>5.1.034: Fixed: Selecting another Bible in the chapter editor does not load that other Bible.</p>
 <p>5.1.034: Fix for very long resource selection page.</p>
