--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.036: The Windows app gets built through Visual Studio 2026.</p>
 <p>5.1.036: Bible editors, Resources, Workspaces support focus groups.</p>
 <p>5.1.035: No longer uses jQuery -> improves performance.</p>
 <p>5.1.034: Fixed: Inserting a footnote in italic text removes the space after the footnote.</p>
