--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.037: More robust resource fetching.</p>
 <p>5.1.037: The Bible demo regularly cleans up the workspaces.</p>
 <p>5.1.037: More detailed logging of Bibledit client connection issues.</p>
 <p>5.1.036: The Windows app gets built through Visual Studio 2026.</p>
