--- a/personalize/index.html
+++ b/personalize/index.html
@@ -334,3 +334,4 @@ translate("Show arrows in the passage navigator for previous and next book and c
 
 <br>
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
+<script type="text/javascript" src="index.js?##VERSION##"></script>
